--- a/Index.css
+++ b/Index.css
@@ -28,6 +28,10 @@ main{
     margin-top: 3rem;
 }
 
+img{
+    margin: 1rem;
+}
+
 .navbar{
     height: 3rem;
     width: 100vw;
@@ -38,8 +42,13 @@ main{
     padding: 0;
     margin: 0;
     display: flex;
-    justify-items: center;
+    align-items: center;
 }
 .nav-item{
     margin: auto;
+    align-items: center;
+}
+
+.navbar-list:last-child{
+    align-items: flex-end;
 }
