update on sign in.html
changes:
-adding google.png
-adding microsoft.png
-changing student hall logo from png to svg
-changing how to use svg by integrating it inside the html
-updating sign in.html by adding some elements
-updating sign in.css by adding some styling
-updating index.html so it can connect to sign in page
-updating index.css by adding a note

--- a/CSS/Index.css
+++ b/CSS/Index.css
@@ -1,3 +1,4 @@
+/* //////////////////////CONFIG////////////////////// */
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
 
 :root{
@@ -12,6 +13,7 @@
     --extra: #d2d1c7;
     --transition-speed: 400ms;
 }
+/* //////////////////////CONFIG////////////////////// */
 
 body{
     width: 100vw;
@@ -28,6 +30,10 @@ section{
 
 a{
     text-decoration: none;
+}
+
+.cls-1{
+    fill: var(--element-primary);
 }
 
 .bg-primary{
