--- a/CSS/Index.css
+++ b/CSS/Index.css
@@ -5,6 +5,7 @@
     font-size: 16px;
     font-family: "Open Sans";
     position: relative;
+    overflow-x: hidden;
     --backgorund-primary: #f5f5e1;
     --background-secondary: #014040;
     --background-extra: rgb(147, 201, 131);
@@ -23,9 +24,8 @@ body{
 section{
     display: flex;
     flex-direction: column;
-    align-items: center;
     min-height: 600px;
-    padding: 100px;
+    padding: 7rem;
 }
 
 a{
@@ -66,6 +66,11 @@ a{
     height: 2px;
     background: linear-gradient(90deg, var(--backgorund-primary) 0%, var(--extra) 30%, var(--extra) 70%, var(--backgorund-primary) 100%);
     border-radius: 99999px;
+}
+
+.slogan{
+    display: block;
+    align-items: flex-start;
 }
 .curve{
     position: absolute;
