--- a/CSS/Index.css
+++ b/CSS/Index.css
@@ -1,12 +1,13 @@
-/* //////////////////////CONFIG////////////////////// */
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
+/* //////////////////////CONFIG////////////////////// #f5f5e1 */
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Roboto&display=swap');
 
 :root{
     font-size: 16px;
     font-family: "Open Sans";
     position: relative;
     overflow-x: hidden;
-    --backgorund-primary: #f5f5e1;
+    --backgorund-primary: white;
     --background-secondary: #014040;
     --background-extra: rgb(147, 201, 131);
     --element-primary: #008f8c;
@@ -14,6 +15,32 @@
     --extra: #d2d1c7;
     --transition-speed: 400ms;
 }
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.bg-primary{
+    background: var(--backgorund-primary);
+}
+
+.bg-secondary{
+    background: var(--background-secondary)
+}
+
+.element-primary{
+    color: var(--element-primary);
+}
+
+.element-secondary{
+    color: var(--element-secondary);
+}
+
+.nav-item{
+    justify-self: center;
+}
+
 /* //////////////////////CONFIG////////////////////// */
 
 body{
@@ -28,25 +55,10 @@ section{
     padding: 7rem;
 }
 
-a{
-    text-decoration: none;
-}
-
 .cls-1{
     fill: var(--element-primary);
 }
 
-.bg-primary{
-    background: var(--backgorund-primary);
-}
-
-.bg-secondary{
-    background: var(--background-secondary)
-}
-
-.element-primary{
-    color: var(--element-primary);
-}
 .nav-bar{
     height: 64px;
     background: var(--backgorund-primary);
@@ -55,13 +67,37 @@ a{
     grid-template-columns: 25% 25% 25% 25%;
     grid-auto-flow: column;
 }
+
 .item-2{
     grid-column: span 2;
 }
-.nav-item{
-    justify-self: center;
-    
+
+.item-3{
+    width: 150px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
+
+.signin{
+    position: relative;
+    top: 2.5px;
+    padding: 0px;
+}
+
+.signup{
+    position: relative;
+    right: 6px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 65px;
+    height: 21px;
+    background: var(--element-primary);
+    color: white;
+    border-radius: 20px;
+}
+
 .nav-border{
     height: 2px;
     background: linear-gradient(90deg, var(--backgorund-primary) 0%, var(--extra) 30%, var(--extra) 70%, var(--backgorund-primary) 100%);
@@ -72,6 +108,18 @@ a{
     display: block;
     align-items: flex-start;
 }
+
 .curve{
     position: absolute;
+}
+
+.txt-1{
+    font-family: 'Roboto', sans-serif;
+    font-size: 30px;
+}
+
+.txt-2{
+    position: relative;
+    top: 5px;
+    font-style: italic;
 }
