--- a/CSS/Sign in.css
+++ b/CSS/Sign in.css
@@ -106,7 +106,7 @@ body {
     width: 411px;
     height: 528px;
     border-radius: 35px;
-    box-shadow: -17px 15px 0px 0px rgba(0, 0, 0, 0.25);    
+    box-shadow: -17px 15px 1px 0px rgba(0, 0, 0, 0.25);    
     background: var(--element-primary);
 }
 
@@ -115,6 +115,7 @@ body {
     font-size: 48px;
     font-weight: bold;
     color: white;
+    
 }
 
 .account {
@@ -192,12 +193,17 @@ body {
     height: 39px;
     border: none;
     border-radius: 24px;
+    transition: transform 0.3s ease-in-out;
+    cursor: pointer;
+    box-shadow: -5px 6px 0px 0px rgba(0, 0, 0, 0.25);
 }
 
-:hover.signin-button {
-    cursor: pointer;
-    background: var(--element-secondary);
-    color: white;
+.signin-button:hover {
+    transform: scale(1.05);
+}
+
+.signin-button:active {
+    transform: scale(0.56);
 }
 
 .signin-with {
@@ -219,6 +225,17 @@ body {
     border-radius: 24px;
     gap: 10px;
     color: #014040;
+    transition: transform 0.3s ease-in-out;
+    cursor: pointer;
+    box-shadow: -5px 6px 0px 0px rgba(0, 0, 0, 0.25);
+}
+
+.sphere1:hover {
+    transform: scale(1.05);
+}
+
+.sphere1:active {
+    transform: scale(0.56);
 }
 
 .sphere2 {
@@ -228,6 +245,18 @@ body {
     border-radius: 24px;   
     gap: 10px;
     color: #014040;
+    transition: transform 0.3s ease-in-out;
+    cursor: pointer;
+    box-shadow: -5px 6px 0px 0px rgba(0, 0, 0, 0.25);
 }
+
+.sphere2:hover {
+    transform: scale(1.05);
+}
+
+.sphere2:active {
+    transform: scale(0.56);
+}
+
 
 /* ///////////////////////CODE/////////////////////// */
