Update on Index
- Adding Sidebar/Sidenav
- Adding animation to the
  Sidebar/Sidenav
- Adding content to the Sidebar/Sidenav

--- a/CSS/Index.css
+++ b/CSS/Index.css
@@ -100,6 +100,89 @@ body{
 
 .item-1{
     right: 60px;
+    cursor: pointer;
+}
+
+.sidenav{
+    width: 0;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    overflow-x: hidden;
+    transition: 0.4s ease-in-out;
+    background: var(--background-secondary  );
+    padding-top: 60px;
+    
+}
+
+.profile-box{
+    height: 20px;
+    position: relative;
+    bottom: 5px;
+}
+
+.profile{
+    position: relative;
+    bottom: 6px;
+    right: 10px;
+    fill: #ffffff;
+}
+
+.name{
+    width: 135px;
+    position: relative;
+    bottom: 40px;
+    left: 40px;
+    font-weight: 300;
+}
+
+.border{
+    position: relative;
+    top: 10px;
+    display: flex;
+    width: 245px;
+    justify-content: center;
+}
+
+.sidenav-border{
+    justify-self: center;
+    height: 2px;
+    width: 220px;
+    border-radius: 99999px;
+    background: var(--backgorund-primary);
+}
+
+.filler{
+    width: ;
+    position: relative;
+    top: 30px;
+}
+
+.sidenav a{
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #ffffff;
+    display: block;
+    transition: 0.3s;
+    font-weight: 500;
+}
+  
+.sidenav a:hover{
+    color: var(--element-secondary);
+}
+  
+.sidenav .closebtn{
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+  #main{
+    transition: margin-left .5s;
 }
 
 .item-2{
