--- a/CSS/Index.css
+++ b/CSS/Index.css
@@ -111,7 +111,7 @@ body{
     left: 0;
     z-index: 1;
     overflow-x: hidden;
-    transition: 0.5s ease-in-out;
+    transition: 0.5s;
     background: var(--background-secondary  );
     padding-top: 60px;
     
